--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,33 @@
-{{page-title "RestaurantFe"}}
+{{page-title "Restaurant"}}
 
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
-
-{{outlet}}
+<header class="bg-white fixed z-50 top-0 left-0 w-full shadow-md transition duration-500">
+    <nav class="flex items-center max-w-screen-xl mx-auto px-6 py-3">
+        <div class="flex flex-grow">
+            <h1 class="text-3xl font-bold">
+                <span class="text-red-500">I</span>talian <span class="text-red-500">R</span>estaurant
+            </h1>
+        </div>
+        <div class="flex items-center justify-end space-x-6 font-semibold">
+            <button class="transform transition duration-500 hover:scale-105">Login</button>
+            <button
+                class="bg-red-500 px-6 py-3 text-white rounded-full transform transition duration-500 hover:scale-105">Register</button>
+        </div>
+    </nav>
+</header>
+<div class="pt-28 pb-10">
+    {{outlet}}
+</div>
+<footer class="bg-gray-800 px-6 py-6">
+    <div class=" max-w-screen-xl mx-auto px-6">
+        <div class="flex items-center">
+            <div class="flex flex-grow">
+                <span class="poppins text-gray-500">Developed by Bima Tribuana Putra</span>
+            </div>
+            <div class="flex justify-end items-center space-x-6">
+                <span class="poppins text-white cursor-pointer">Privacy Policy</span>
+                <span class="poppins text-white cursor-pointer">Terms of Use</span>
+                <span class="poppins text-white cursor-pointer">Pricing</span>
+            </div>
+        </div>
+    </div>
+</footer>
