--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -10,10 +10,8 @@
       <h1 class="text-gray-900 poppins text-xl">{{menu.name}}</h1>
       <p class="text-gray-500 poppins text-sm text-center">{{menu.description}}</p>
       <h2 class="text-gray-900 poppins text-2xl font-bold">${{menu.price}}</h2>
-      <button
-        class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full mt-24 transform transition duration-300 hover:scale-105"
-        type="button">Order
-        Now</button>
+      <button type="button"
+        class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full mt-24 transform transition duration-300 hover:scale-105">Order Now</button>
     </div>
   </div>
   {{/each}}
