--- a/app/components/header.hbs
+++ b/app/components/header.hbs
@@ -1,14 +1,15 @@
 <header class="bg-white fixed z-50 top-0 left-0 w-full shadow-md transition duration-500">
     <nav class="flex items-center max-w-screen-xl mx-auto px-6 py-3">
-        <div class="flex flex-grow">
+        <LinkTo @route="home" class="flex flex-grow">
             <h1 class="text-3xl font-bold">
                 <span class="text-red-500">I</span>talian <span class="text-red-500">R</span>estaurant
             </h1>
-        </div>
+        </LinkTo>
         <div class="flex items-center justify-end space-x-6 font-semibold">
             <button class="transform transition duration-500 hover:scale-105" type="button">Login</button>
-            <button type="button"
-                class="bg-red-500 px-6 py-3 text-white rounded-full transform transition duration-500 hover:scale-105">Register</button>
+            <LinkTo @route="register"
+                class="bg-red-500 px-6 py-3 text-white rounded-full transform transition duration-500 hover:scale-105">
+                Register</LinkTo>
         </div>
     </nav>
 </header>
