--- a/app/components/header.hbs
+++ b/app/components/header.hbs
@@ -6,7 +6,7 @@
             </h1>
         </LinkTo>
         <div class="flex items-center justify-end space-x-6 font-semibold">
-            <button class="transform transition duration-500 hover:scale-105" type="button">Login</button>
+            <LinkTo @route="login" class="transform transition duration-500 hover:scale-105">Login</LinkTo>
             <LinkTo @route="register"
                 class="bg-red-500 px-6 py-3 text-white rounded-full transform transition duration-500 hover:scale-105">
                 Register</LinkTo>
