Create session service

--- a/app/components/header.hbs
+++ b/app/components/header.hbs
@@ -6,10 +6,16 @@
             </h1>
         </LinkTo>
         <div class="flex items-center justify-end space-x-6 font-semibold">
+            {{#if this.isLogin}}
+            <button class="transform transition duration-500 hover:scale-105" type="button">Profile</button>
+            <button {{on "click" this.doLogout}} class="transform transition duration-500 hover:scale-105"
+                type="button">Logout</button>
+            {{else}}
             <LinkTo @route="login" class="transform transition duration-500 hover:scale-105">Login</LinkTo>
             <LinkTo @route="register"
                 class="bg-red-500 px-6 py-3 text-white rounded-full transform transition duration-500 hover:scale-105">
                 Register</LinkTo>
+            {{/if}}
         </div>
     </nav>
 </header>
