--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -2,7 +2,17 @@
 
 <div class="flex flex-col items-center pt-10">
     <div class="bg-white shadow-md rounded-md p-8 w-1/3">
-        <h1 class="text-3xl font-bold text-center text-red-500 mb-4">Login Customer</h1>
+        <h1 class="text-3xl font-bold text-center text-red-500 mb-4">Login</h1>
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="role">Select Role</label>
+            <select id="role" {{on "change" this.selectRole}}
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                <option value="">Select Role</option>
+                {{#each @model.availableRoles as |role|}}
+                <option value="{{role.value}}">{{role.caption}}</option>
+                {{/each}}
+            </select>
+        </div>
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Username</label>
             <input {{on "keyup" this.updateData}}
