--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -17,13 +17,13 @@
             <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Username</label>
             <input {{on "keyup" this.updateData}}
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="username" type="text" placeholder="Enter your username" value="{{this.loginReq.username}}">
+                id="username" type="text" placeholder="Enter your username">
         </div>
         <div class="mb-6">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Password</label>
             <input {{on "keyup" this.updateData}}
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="password" type="password" placeholder="Enter your password" value="{{this.loginReq.password}}">
+                id="password" type="password" placeholder="Enter your password">
         </div>
         <div class="flex justify-center">
             <button type="button" {{on "click" this.doLogin}} class="{{if this.isValid " bg-red-500" "bg-gray-500" }}
