--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -7,19 +7,19 @@
             <label class="block text-gray-700 text-sm font-bold mb-2" for="name">Name</label>
             <input {{on "keyup" this.updateData}}
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="name" type="text" placeholder="Enter your name" value="{{this.registerReq.name}}">
+                id="name" type="text" placeholder="Enter your name">
         </div>
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Username</label>
             <input {{on "keyup" this.updateData}}
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="username" type="text" placeholder="Enter your username" value="{{this.registerReq.username}}">
+                id="username" type="text" placeholder="Enter your username">
         </div>
         <div class="mb-6">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Password</label>
             <input {{on "keyup" this.updateData}}
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="password" type="password" placeholder="Enter your password" value="{{this.registerReq.password}}">
+                id="password" type="password" placeholder="Enter your password">
         </div>
         <div class="flex justify-center">
             <button type="button" {{on "click" this.doRegister}} class="{{if this.isValid " bg-red-500" "bg-gray-500" }}
