--- a/app/templates/menu.hbs
+++ b/app/templates/menu.hbs
@@ -1,34 +1,41 @@
 {{page-title "Menu"}}
 
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-10 p-10">
-    {{#each this.menuListState as |menu|}}
-    <div
-        class="bg-white border border-gray-100 transition transform duration-700 hover:shadow-xl hover:scale-105 p-4 rounded-lg relative">
-        <img class="w-full h-64 mx-auto object-cover object-center transform transition duration-300 hover:scale-105"
-            src="{{menu.image}}" alt="{{menu.name}}" />
-        <div class="flex flex-col items-center my-3 space-y-2">
-            <h1 class="text-gray-900 poppins text-xl">{{menu.name}}</h1>
-            <p class="text-gray-500 poppins text-sm text-center">{{menu.description}}</p>
-            <h2 class="text-gray-900 poppins text-2xl font-bold">${{menu.price}}</h2>
-            <div class="flex justify-center space-x-4">
-                {{#if this.session.isLogin}}
-                {{#if this.session.isAdmin}}
-                <button type="button" {{on "click" (fn this.updateMenu menu)}}
-                    class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">Edit</button>
-                <button type="button" {{on "click" (fn this.deleteMenu menu)}}
-                    class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">Delete</button>
-                {{else}}
-                <button type="button"
-                    class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">Add
-                    to Cart</button>
-                {{/if}}
-                {{else}}
-                <LinkTo @route="login"
-                    class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">
-                    Order Now</LinkTo>
-                {{/if}}
+<div class="px-10 py-5">
+    <div class="flex justify-end mb-4">
+        <button type="button" {{on "click" this.createMenu}}
+            class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">Create
+            New Menu</button>
+    </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-10">
+        {{#each this.menuListState as |menu|}}
+        <div
+            class="bg-white border border-gray-100 transition transform duration-700 hover:shadow-xl hover:scale-105 p-4 rounded-lg relative">
+            <img class="w-full h-64 mx-auto object-cover object-center transform transition duration-300 hover:scale-105"
+                src="{{menu.image}}" alt="{{menu.name}}" />
+            <div class="flex flex-col items-center my-3 space-y-2">
+                <h1 class="text-gray-900 poppins text-xl">{{menu.name}}</h1>
+                <p class="text-gray-500 poppins text-sm text-center">{{menu.description}}</p>
+                <h2 class="text-gray-900 poppins text-2xl font-bold">${{menu.price}}</h2>
+                <div class="flex justify-center space-x-4">
+                    {{#if this.session.isLogin}}
+                    {{#if this.session.isAdmin}}
+                    <button type="button" {{on "click" (fn this.updateMenu menu)}}
+                        class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">Edit</button>
+                    <button type="button" {{on "click" (fn this.deleteMenu menu)}}
+                        class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">Delete</button>
+                    {{else}}
+                    <button type="button"
+                        class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">Add
+                        to Cart</button>
+                    {{/if}}
+                    {{else}}
+                    <LinkTo @route="login"
+                        class="bg-red-500 text-white px-8 py-2 focus:outline-none poppins rounded-full transform transition duration-300 hover:scale-105">
+                        Order Now</LinkTo>
+                    {{/if}}
+                </div>
             </div>
         </div>
+        {{/each}}
     </div>
-    {{/each}}
 </div>
