--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -1,9 +1,8 @@
 {{page-title "Cart"}}
 
-<div class="flex flex-col items-center pt-10">
-    <div class="bg-white shadow-md rounded-md p-8 w-1/2">
+<div class="flex flex-col items-center py-10">
+    <div class="bg-white shadow-md rounded-md p-8 w-2/3">
         <h1 class="text-3xl font-bold text-center text-red-500 mb-4">Your Cart</h1>
-
         {{#if this.cart.cartCount}}
         <div class="overflow-x-auto">
             <table class="table-auto w-full">
